bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-bad
spec:
  containers:
    - name: nginx
      image: nginx:latest
