exception-pod-monitoring.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.28.0/pod-v1.json
apiVersion: v1
kind: Pod
metadata:
  name: node-exporter-agent
  namespace: monitoring
  labels:
    app.kubernetes.io/name: node-exporter
spec:
  restartPolicy: Never
  containers:
    - name: node-exporter
      image: prom/node-exporter:v1.7.0
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
        requests:
          cpu: "50m"
          memory: "64Mi"
