good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-good
spec:
  containers:
    - name: nginx
      image: nginxinc/nginx-unprivileged:alpine
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
      resources:
        limits:
          cpu: "200m"
          memory: "256Mi"
        requests:
          cpu: "100m"
          memory: "128Mi"
