mutate-pod.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.28.0/pod-v1.json
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-mutate
  namespace: default
  labels:
    app.kubernetes.io/name: test-pod-mutate
    security.lab/role: mutation-demo
spec:
  restartPolicy: Never
  containers:
    - name: nginx
      image: nginxinc/nginx-unprivileged:alpine
      securityContext:
        runAsNonRoot: true
      resources:
        limits:
          cpu: "100m"
          memory: "128Mi"
        requests:
          cpu: "50m"
          memory: "64Mi"
